<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="global_transfer">Transfer Luar Negeri</string>
    <string name="choose_bank">Pilih bank</string>
    <string name="choose_bank_destination">Pilih Bank Tujuan</string>
    <string name="bank_account_number">Nomor Rekening</string>
    <string name="input_bank_account_number">Masukkan nomor rekening</string>
    <string name="check_bank_account_number">Cek Rekening</string>
    <string name="add_rekening">Tambah Rekening Tujuan</string>
    <string name="destination_rekening">Rekening Tujuan</string>
    <string name="transfer_fee">Biaya Transfer</string>
    <string name="topup_qris_success">Selamat, isi deposit melalui cashplus <b>%1$s</b> ke dompet QRIS anda.</string>
    <string name="transfer_success">Transaksi Berhasil</string>
    <string name="transfer_success_desc">Selamat, transaksi transfer deposit kamu berhasil</string>
    <string name="failed_fetch_balance">Gagal mengambil deposit anda, silahkan coba lagi</string>
    <string name="something_wrong_transfer_news">Berita transfer tidak dapat diterima, silahkan ubah berita transfer</string>
    <string name="transfer_continue">Lanjut Transfer</string>
    <string name="empty_list_bank">Halo, saat ini di daftarmu belum ada daftar rekening bank tujuan.</string>
    <string name="find_bank_or_number_bank">Cari nama, no rekening</string>
    <string name="bank_saved">Rekening Tersimpan</string>
    <string name="already_saved">No. Rekening sudah tersimpan</string>
    <string name="search_bank">Cari Bank</string>
    <string name="create_now">Buat Sekarang</string>
    <string name="check_success">Cek Berhasil</string>
    <string name="check_bank_desc">Selamat, nomor rekening berhasil ditemukan dengan detail berikut</string>
    <string name="choose_destination_country">Pilih Negara Tujuan</string>
    <string name="find_destination_country">Cari negara tujuan</string>
    <string name="popular_country" tools:ignore="Typos">Negara Populer</string>
    <string name="other_country">Negara Lainnya</string>
    <string name="personal">Personal</string>
    <string name="personal_desc">Transfer ke rekening seseorang</string>
    <string name="business">Bisnis</string>
    <string name="account_business">Akun Bisnis</string>
    <string name="business_desc">Transfer ke perusahaan, lembaga, dsb.</string>
    <string name="nominal_transfer">Nominal Transfer</string>
    <string name="value_transfer">Nilai Transfer</string>
    <string name="nominal_format">Nominal %1$s</string>
    <string name="idr">IDR</string>
    <string name="exchange_rate_format">Kurs dari %1$s ke IDR</string>
    <string name="idr_format">IDR %1$s</string>
    <string name="choose_transfer">Pilih mau transfer kemana?</string>
    <string name="beneficiary_account">Akun Penerima</string>
    <string name="change_beneficiary_account">Ubah Detail Penerima</string>
    <string name="bank_name">Nama Bank</string>
    <string name="beneficiary_account_number">Nomor Rekening Penerima</string>
    <string name="input_beneficiary_acc_num">Masukkan nomor rekening penerima</string>
    <string name="beneficiary_name">Nama Penerima</string>
    <string name="input_beneficiary_name">Masukkan nama penerima</string>
    <string name="beneficiary_address">Alamat Penerima</string>
    <string name="input_beneficiary_address">Masukkan alamat penerima</string>
    <string name="beneficiary_city">Kota Penerima</string>
    <string name="input_beneficiary_city">Masukan kota penerima</string>
    <string name="relationship">Hubungan Dengan Tujuan</string>
    <string name="choose_relationship">Pilih hubungan</string>
    <string name="nationality">Kebangsaan</string>
    <string name="choose_nationality">Pilih kebangsaan</string>
    <string name="transfer_news">Berita Transfer</string>
    <string name="transfer_to_currency_format">Kirim</string>
    <string name="description_optional">Keterangan (opsional)</string>
    <string name="input_transfer_news">Masukkan berita transfer</string>
    <string name="detail_beneficiary">Detail Penerima</string>
    <string name="convert_result">Hasil Konversi</string>
    <string name="confirm_delete_bank_acc">Yakin anda mau menghapus rekening\ndari daftar?</string>
    <string name="input_format_required_first">Silahkan isi %1$s terlebih dahulu</string>
    <string name="make_sure_correct_input">Pastikan data yang anda isi tidak ada kesalahan.</string>
    <string name="new_acc_number_saved_successful">Rekening baru berhasil disimpan</string>
    <string name="limit_transfer_error">Hasil konversi dari %1$s ke IDR terlalu besar/kecil.\nIngin mengubah nominal %2$s?</string>
    <string name="beneficiary_num_name_format">%1$s - %2$s</string>
    <string name="global_transfer_successfully">Transfer luar negeri kamu sedang diproses.\nApabila deposit tidak diterima selama 2 hari, segera hubungi CS</string>
</resources>