<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".presentation.global.beneficiary.BeneficiaryAccountActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/img_dashboard"
        app:layout_constraintHeight_percent=".18"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/statusBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_24"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wrapper_back"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_app_bar"
        app:layout_constraintTop_toBottomOf="@id/statusBar">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_12"
            android:padding="@dimen/dimen_4"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/title_global_transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"
            android:text="@string/beneficiary_account"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/wrapper_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_4"
        android:background="@drawable/bg_white_rounded_top_16"
        app:layout_constraintTop_toBottomOf="@id/wrapper_back"
        app:layout_constraintBottom_toTopOf="@id/wrapper_important_information">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_20">

            <TextView
                android:id="@+id/txt_bank_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:textSize="13sp"
                android:text="@string/bank_name"
                android:textColor="#334155"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.pasukanlangit.id.core.presentation.components.CustomTextInputLayout
                android:id="@+id/input_bank_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4"
                app:hintEnabled="false"
                app:hintAnimationEnabled="false"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/txt_bank_name">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/edt_bank_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_38"
                    android:paddingStart="@dimen/dimen_12"
                    android:paddingEnd="@dimen/dimen_8"
                    android:drawableEnd="@drawable/icon_expand"
                    android:background="@drawable/bg_transparent_border_slate200_rounded_10"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="12sp"
                    android:hint="@string/choose_bank"
                    android:textColor="#1E293B"
                    android:textColorHint="#94A3B8"
                    android:inputType="textPhonetic"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@id/edt_beneficiary_acc_num"/>
            </com.pasukanlangit.id.core.presentation.components.CustomTextInputLayout>

            <TextView
                android:id="@+id/txt_beneficiary_account_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4"
                android:fontFamily="@font/poppins_regular"
                android:textSize="13sp"
                android:text="@string/beneficiary_account_number"
                android:textColor="#334155"
                app:layout_constraintTop_toBottomOf="@id/input_bank_name"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.pasukanlangit.id.core.presentation.components.CustomTextInputLayout
                android:id="@+id/input_beneficiary_acc_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4"
                app:hintEnabled="false"
                app:hintAnimationEnabled="false"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/txt_beneficiary_account_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_beneficiary_acc_num"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_38"
                    android:paddingHorizontal="@dimen/dimen_12"
                    android:background="@drawable/bg_transparent_border_slate200_rounded_10"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="12sp"
                    android:hint="@string/input_beneficiary_acc_num"
                    android:textColor="#334155"
                    android:textColorHint="#94A3B8"
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@id/edt_beneficiary_name"/>
            </com.pasukanlangit.id.core.presentation.components.CustomTextInputLayout>

            <TextView
                android:id="@+id/txt_beneficiary_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4"
                android:fontFamily="@font/poppins_regular"
                android:textSize="13sp"
                android:text="@string/beneficiary_name"
                android:textColor="#334155"
                app:layout_constraintTop_toBottomOf="@id/input_beneficiary_acc_num"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.pasukanlangit.id.core.presentation.components.CustomTextInputLayout
                android:id="@+id/input_beneficiary_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4"
                app:hintEnabled="false"
                app:hintAnimationEnabled="false"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/txt_beneficiary_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_beneficiary_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_38"
                    android:paddingHorizontal="@dimen/dimen_12"
                    android:background="@drawable/bg_transparent_border_slate200_rounded_10"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="12sp"
                    android:hint="@string/input_beneficiary_name"
                    android:textColor="#334155"
                    android:textColorHint="#94A3B8"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@id/edt_beneficiary_city"/>
            </com.pasukanlangit.id.core.presentation.components.CustomTextInputLayout>

            <TextView
                android:id="@+id/txt_beneficiary_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4"
                android:fontFamily="@font/poppins_regular"
                android:textSize="13sp"
                android:text="@string/beneficiary_city"
                android:textColor="#334155"
                app:layout_constraintTop_toBottomOf="@id/input_beneficiary_name"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.pasukanlangit.id.core.presentation.components.CustomTextInputLayout
                android:id="@+id/input_beneficiary_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4"
                app:hintEnabled="false"
                app:hintAnimationEnabled="false"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/txt_beneficiary_city">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_beneficiary_city"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_38"
                    android:paddingHorizontal="@dimen/dimen_12"
                    android:background="@drawable/bg_transparent_border_slate200_rounded_10"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="12sp"
                    android:hint="@string/input_beneficiary_city"
                    android:textColor="#334155"
                    android:textColorHint="#94A3B8"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@id/edt_beneficiary_address"/>
            </com.pasukanlangit.id.core.presentation.components.CustomTextInputLayout>

            <TextView
                android:id="@+id/txt_beneficiary_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4"
                android:fontFamily="@font/poppins_regular"
                android:textSize="13sp"
                android:text="@string/beneficiary_address"
                android:textColor="#334155"
                app:layout_constraintTop_toBottomOf="@id/input_beneficiary_city"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.pasukanlangit.id.core.presentation.components.CustomTextInputLayout
                android:id="@+id/input_beneficiary_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4"
                app:hintEnabled="false"
                app:hintAnimationEnabled="false"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/txt_beneficiary_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_beneficiary_address"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_38"
                    android:paddingHorizontal="@dimen/dimen_12"
                    android:background="@drawable/bg_transparent_border_slate200_rounded_10"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="12sp"
                    android:hint="@string/input_beneficiary_address"
                    android:textColor="#334155"
                    android:textColorHint="#94A4B8"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@id/edt_nationality"/>
            </com.pasukanlangit.id.core.presentation.components.CustomTextInputLayout>

            <TextView
                android:id="@+id/txt_nationality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4"
                android:fontFamily="@font/poppins_regular"
                android:textSize="13sp"
                android:text="@string/nationality"
                android:textColor="#334155"
                app:layout_constraintTop_toBottomOf="@id/input_beneficiary_address"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.pasukanlangit.id.core.presentation.components.CustomTextInputLayout
                android:id="@+id/input_nationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4"
                app:hintEnabled="false"
                app:hintAnimationEnabled="false"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/txt_nationality">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/edt_nationality"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_38"
                    android:paddingStart="@dimen/dimen_12"
                    android:paddingEnd="@dimen/dimen_8"
                    android:drawableEnd="@drawable/icon_expand"
                    android:background="@drawable/bg_transparent_border_slate200_rounded_10"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="12sp"
                    android:hint="@string/choose_nationality"
                    android:textColor="#1E293B"
                    android:textColorHint="#94A3B8"
                    android:inputType="textPersonName"
                    android:imeOptions="actionDone"/>
            </com.pasukanlangit.id.core.presentation.components.CustomTextInputLayout>

            <TextView
                android:id="@+id/txt_relationship"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4"
                android:fontFamily="@font/poppins_regular"
                android:textSize="13sp"
                android:text="@string/relationship"
                android:textColor="#334155"
                app:layout_constraintTop_toBottomOf="@id/input_nationality"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_relationship"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_38"
                android:layout_marginTop="@dimen/dimen_4"
                android:background="@drawable/bg_transparent_spinner_border_slate200_rounded_10"
                android:popupBackground="@drawable/bg_slate100_border_slate200_rounded_10"
                android:spinnerMode="dropdown"
                app:layout_constraintTop_toBottomOf="@id/txt_relationship"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wrapper_important_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_12"
        android:layout_marginHorizontal="@dimen/dimen_20"
        android:padding="@dimen/dimen_12"
        android:background="@drawable/bg_slate50_border_slate200_rounded_12"
        app:layout_constraintBottom_toTopOf="@id/line_breaker">

        <TextView
            android:id="@+id/txt_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textSize="13sp"
            android:text="@string/warning"
            android:textColor="#0A57FF"
            android:drawablePadding="@dimen/dimen_6"
            app:drawableStartCompat="@drawable/icon_information"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_info_set_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/poppins_regular"
            android:textSize="12sp"
            android:text="@string/make_sure_correct_input"
            android:textColor="#0A57FF"
            app:layout_constraintTop_toBottomOf="@id/txt_information"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/line_breaker"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginBottom="@dimen/dimen_12"
        android:background="#E2E8F0"
        app:layout_constraintBottom_toTopOf="@id/btn_save"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_38"
        android:layout_marginBottom="@dimen/dimen_28"
        android:layout_marginHorizontal="@dimen/dimen_20"
        android:padding="0dp"
        android:background="@drawable/background_button_state"
        android:fontFamily="@font/poppins_medium"
        android:textSize="13sp"
        android:text="@string/save"
        android:textColor="@drawable/color_indicator_state"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="#12ACE3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>