<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dimen_16"
    android:transitionName="find_bank"
    tools:context="com.pasukanlangit.id.cash_transfer.presentation.local.bank_add.RegisBankAccountFragment">

    <ImageView
        android:id="@+id/img_bank"
        android:layout_width="80dp"
        android:layout_height="@dimen/dimen_48"
        android:layout_marginTop="@dimen/dimen_12"
        android:background="@drawable/bg_grey_slate100_rounded_8"
        android:padding="@dimen/dimen_8"
        android:src="@drawable/ic_indonesia_flag"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_Bank_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_12"
        android:fontFamily="@font/poppins_regular"
        android:textSize="15sp"
        tools:text="Bank Rakyat Indonesia"
        app:layout_constraintTop_toTopOf="@id/img_bank"
        app:layout_constraintBottom_toBottomOf="@id/img_bank"
        app:layout_constraintStart_toEndOf="@id/img_bank"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtNoRek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:fontFamily="@font/poppins_regular"
        android:textSize="13sp"
        android:text="@string/bank_account_number"
        android:textColor="#3C4D5F"
        app:layout_constraintTop_toBottomOf="@id/img_bank"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.pasukanlangit.id.core.presentation.components.CustomTextInputLayout
        android:id="@+id/input_bank_acc_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4"
        app:hintEnabled="false"
        app:hintAnimationEnabled="false"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/txtNoRek">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_bank_acc_num"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_38"
            android:paddingHorizontal="@dimen/dimen_12"
            android:background="@drawable/bg_transparent_border_slate200_rounded_10"
            android:fontFamily="@font/poppins_regular"
            android:textSize="12sp"
            android:hint="@string/input_bank_account_number"
            android:textColor="#1E293B"
            android:textColorHint="#94A3B8"
            android:inputType="numberDecimal"
            android:digits="0123456789"
            android:maxLength="24"/>
    </com.pasukanlangit.id.core.presentation.components.CustomTextInputLayout>

    <Button
        android:id="@+id/btn_check"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_38"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginBottom="@dimen/dimen_24"
        android:background="@drawable/background_button_state"
        android:fontFamily="@font/poppins_medium"
        android:textSize="13sp"
        android:text="@string/check_bank_account_number"
        android:textAllCaps="false"
        android:textColor="@drawable/color_indicator_state"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/input_bank_acc_num"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>